--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+arrow==0.16.0
 asgiref==3.2.10
+binaryornot==0.4.4
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+cookiecutter==1.7.2
+decorator==4.4.2
 defusedxml==0.6.0
 diff-match-patch==20200713
 dj-database-url==0.5.0
@@ -6,20 +13,36 @@ Django==3.1.1
 django-import-export==2.3.0
 et-xmlfile==1.0.1
 gunicorn==20.0.4
+idna==2.10
 jdcal==1.4.1
+Jinja2==2.11.2
+jinja2-time==0.2.0
 MarkupPy==1.14
+MarkupSafe==1.1.1
+Mesa==0.8.7
+networkx==2.5
 numpy==1.19.2
 odfpy==1.4.1
 opencv-python==4.4.0.44
 openpyxl==3.0.5
+pandas==1.1.3
 Pillow==7.2.0
+poyo==0.5.0
 psycopg2-binary==2.8.6
 pytesseract==0.3.6
+python-dateutil==2.8.1
+python-slugify==4.0.1
 pytz==2020.1
 PyYAML==5.3.1
 pyzbar==0.1.8
+requests==2.24.0
+six==1.15.0
 sqlparse==0.3.1
 tablib==2.0.0
+text-unidecode==1.3
+tornado==6.0.4
+tqdm==4.50.0
+urllib3==1.25.10
 whitenoise==5.2.0
 xlrd==1.2.0
 xlwt==1.3.0
