--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ Mesa==0.8.7
 networkx==2.5
 numpy==1.19.2
 odfpy==1.4.1
-opencv-python==4.4.0.44
+opencv-python-headless==4.2.0.32
 openpyxl==3.0.5
 pandas==1.1.3
 Pillow==7.2.0
